--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 	<script src="https://kit.fontawesome.com/b33fd54741.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="slick.css">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="main.css">
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<section class="menu_class">
@@ -689,21 +689,21 @@
 			<div>
 				<div class=" list_slider2">
 					<div class="list2_menu-market">
-						<ul>
+						<ul class="prev">
 							<li><i class="fas fa-arrow-circle-left"></i></li>
 							<li><a href="#">Back</a></li>
 						</ul>
 						<ul>
 							<li>|</li>
 						</ul>
-						<ul>
+						<ul class="next">
 							<li><a href="#">Next</a></li>
 							<li><i class="fas fa-arrow-circle-right"></i></li>
 						</ul>
 					</div>
 				</div>
 				<div class="slider2_divs">
-					<div class="first_slider2">
+					<div class="first_slider2 slider2_div">
 						<div>
 							<h1>New Year Special</h1>
 							<h2>Big Sale 50% Off</h2>
@@ -715,7 +715,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="second_slider2">
+					<div class="second_slider2 slider2_div">
 						<div>
 							<h1>#New Arrivals</h1>
 							<h2>Suitable Wood Tool</h2>
@@ -727,10 +727,34 @@
 							</div>
 						</div>
 					</div>
-					<div class="last_slider2">
+					<div class="third_slider2 slider2_div">
 						<div>
 							<h1>#Hot Collections</h1>
 							<h2>Wood Rubber Chair</h2>
+							<div class="button-market2">
+								<button>Shop Now
+									<div class="circlediv1-market2"></div>
+									<div class="circlediv2-market2"></div>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="forth_slider2 slider2_div">
+						<div>
+							<h1>#Hot Collections</h1>
+							<h2>Wood Rubber Chair</h2>
+							<div class="button-market2">
+								<button>Shop Now
+									<div class="circlediv1-market2"></div>
+									<div class="circlediv2-market2"></div>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="fifth_slider2 slider2_div">
+						<div>
+							<h1>#New Arrivals</h1>
+							<h2>Suitable Wood Tool</h2>
 							<div class="button-market2">
 								<button>Shop Now
 									<div class="circlediv1-market2"></div>
@@ -796,99 +820,129 @@
 							</button>
 						</div>
 					</div>
-					<div class="table-market3">
-						<div class="flex-div1">
-							<div class="background-market">
-								<div class="background-market1">
+						<div class="table-market3">
+							<div class="flex-div1 table-market3_div">
+								<div class="background-market">
+									<div class="background-market1">
+											<div>
+												<div class="cart-market active_button"><button><i class="fas fa-shopping-cart"></i> Add to cart</button></div>
+												<div class="search-market active_button"><button><i class="fas fa-search"></i></button></div>
+												<div class="heart-market active_button"><button><i class="far fa-heart"></i></button></div>
+												<div class="exchange-market active_button"><button><i class="fas fa-exchange-alt"></i></button></div>
+											</div>
+											<nav class="sticker1"><p>New</p></nav>
+									</div>
+								</div>
+								<div class="characteristics">
+									<div class="characteristics_div1">
+										<p>Chanel</p>
+										<div class="black_background">20%</div>
+									</div>
+									<h1>Dopo Designs Woolrich Klettersack Backpack</h1>
+									<div class="characteristics_div2">
+										<p>$98.00</p>
 										<div>
-											<div class="cart-market active_button"><button><i class="fas fa-shopping-cart"></i> Add to cart</button></div>
-											<div class="search-market active_button"><button><i class="fas fa-search"></i></button></div>
-											<div class="heart-market active_button"><button><i class="far fa-heart"></i></button></div>
-											<div class="exchange-market active_button"><button><i class="fas fa-exchange-alt"></i></button></div>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
 										</div>
-										<nav class="sticker1"><p>New</p></nav>
-								</div>
-							</div>
-							<div class="characteristics">
-								<div class="characteristics_div1">
-									<p>Chanel</p>
-									<div class="black_background">20%</div>
-								</div>
-								<h1>Dopo Designs Woolrich Klettersack Backpack</h1>
-								<div class="characteristics_div2">
-									<p>$98.00</p>
-									<div>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="vanish2_div">
-							<div class="background-market">
-								<div class="background-market2">
-									<div>
-										<div class="cart-market"><button><i class="fas fa-shopping-cart"></i> Add to cart</button></div>
-										<div class="search-market"><button><i class="fas fa-search"></i></button></div>
-										<div class="heart-market"><button><i class="far fa-heart"></i></button></div>
-										<div class="exchange-market"><button><i class="fas fa-exchange-alt"></i></button></div>
-									</div>
-									<nav class="sticker2"><p>HOT</p></nav>
-								</div>
-							</div>
-							<div class="characteristics">
-								<div class="characteristics_div1">
-									<p>Chanel</p>
-								</div>
-								<h1>Dopo Designs Woolrich Klettersack Backpack</h1>
-								<div class="characteristics_div2">
-									<p>$98.00</p>
-									<div>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="vanish_div">
-							<div class="background-market">
-								<div class="background-market3">
+							<div class="vanish2_div table-market3_div">
+								<div class="background-market">
+									<div class="background-market2">
 										<div>
 											<div class="cart-market"><button><i class="fas fa-shopping-cart"></i> Add to cart</button></div>
 											<div class="search-market"><button><i class="fas fa-search"></i></button></div>
 											<div class="heart-market"><button><i class="far fa-heart"></i></button></div>
 											<div class="exchange-market"><button><i class="fas fa-exchange-alt"></i></button></div>
 										</div>
-										<nav class="sticker3"><p>SALE</p></nav>
+										<nav class="sticker2"><p>HOT</p></nav>
+									</div>
 								</div>
-							</div>
-							<div class="characteristics">
-								<div class="characteristics_div1">
-									<p>Chanel</p>
-									<div class="black_background">20%</div>
-								</div>
-								<h1>Dopo Designs Woolrich Klettersack Backpack</h1>
-								<div class="characteristics_div2">
-									<p>$98.00</p>
-									<div>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
+								<div class="characteristics">
+									<div class="characteristics_div1">
+										<p>Chanel</p>
+									</div>
+									<h1>Dopo Designs Woolrich Klettersack Backpack</h1>
+									<div class="characteristics_div2">
+										<p>$98.00</p>
+										<div>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+										</div>
 									</div>
 								</div>
 							</div>
+							<div class="vanish_div table-market3_div">
+								<div class="background-market">
+									<div class="background-market3">
+											<div>
+												<div class="cart-market"><button><i class="fas fa-shopping-cart"></i> Add to cart</button></div>
+												<div class="search-market"><button><i class="fas fa-search"></i></button></div>
+												<div class="heart-market"><button><i class="far fa-heart"></i></button></div>
+												<div class="exchange-market"><button><i class="fas fa-exchange-alt"></i></button></div>
+											</div>
+											<nav class="sticker3"><p>SALE</p></nav>
+									</div>
+								</div>
+								<div class="characteristics">
+									<div class="characteristics_div1">
+										<p>Chanel</p>
+										<div class="black_background">20%</div>
+									</div>
+									<h1>Dopo Designs Woolrich Klettersack Backpack</h1>
+									<div class="characteristics_div2">
+										<p>$98.00</p>
+										<div>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- <div class="vanish_div table-market3_div">
+								<div class="background-market">
+									<div class="background-market3">
+											<div>
+												<div class="cart-market"><button><i class="fas fa-shopping-cart"></i> Add to cart</button></div>
+												<div class="search-market"><button><i class="fas fa-search"></i></button></div>
+												<div class="heart-market"><button><i class="far fa-heart"></i></button></div>
+												<div class="exchange-market"><button><i class="fas fa-exchange-alt"></i></button></div>
+											</div>
+											<nav class="sticker3"><p>SALE</p></nav>
+									</div>
+								</div>
+								<div class="characteristics">
+									<div class="characteristics_div1">
+										<p>Chanel</p>
+										<div class="black_background">20%</div>
+									</div>
+									<h1>Dopo Designs Woolrich Klettersack Backpack</h1>
+									<div class="characteristics_div2">
+										<p>$98.00</p>
+										<div>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+										</div>
+									</div>
+								</div>
+							</div> -->
+							<nav class="left_arrow"><i class="fas fa-arrow-left"></i></nav>
+							<nav class="right_arrow"><i class="fas fa-arrow-right"></i></nav>
 						</div>
-						<nav class="left_arrow"><i class="fas fa-arrow-left"></i></nav>
-						<nav class="right_arrow"><i class="fas fa-arrow-right"></i></nav>
-					</div>
 				</div>
 			</section>
 		</section>
@@ -954,7 +1008,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="flex-div vanish_div">
+					<div class="flex-div3 vanish_div">
 						<div class="background-market background-market3_part2">
 							<div class="background-market3">
 									<div>
@@ -1156,8 +1210,8 @@
 	</footer>
 
 	<script src="./style.js"></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="./slick.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 	<script type="text/javascript">
 	    
@@ -1196,7 +1250,53 @@ $(".list_menu-market ul li").click(function(){
 
 	// Slick slider example
 
-	$('.slick').slick();
+	$(document).ready(function(){
+		$('.slider2_divs').slick({
+        lazyLoad: 'ondemand',
+        slidesToShow: 3,
+		slidesToScroll: 1,
+		prevArrow : $('.prev'),
+		nextArrow : $('.next'),
+		responsive: [
+    {
+      breakpoint: 1024,
+      settings: {
+        slidesToShow: 3,
+        slidesToScroll: 3,
+        infinite: true,
+
+      }
+    },
+    {
+      breakpoint: 600,
+      settings: {
+        slidesToShow: 2,
+        slidesToScroll: 2
+      }
+    },
+    {
+      breakpoint: 480,
+      settings: {
+        slidesToShow: 1,
+        slidesToScroll: 1
+      }
+    }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+  ]
+	  });
+ });
+    // $(document).ready(function(){
+    //     $('.table-market3').slick({
+    //       lazyLoad: 'ondemand',
+    //       slidesToShow: 3,
+	// 	  slidesToScroll: 1,
+	// 	  prevArrow : $('.left_arrow'),
+	// 	  nextArrow : $('.right_arrow')
+	// 	});
+	// });
+			
 
 
 	// Adding the side menu
